--- a/server/.gitignore
+++ b/server/.gitignore
@@ -23,11 +23,11 @@
 
 # misc
 /.DS_Store
-/.env.local
-/.env.development.local
-/.env.test.local
-/.env.production.local
-/.env
+# /.env.local
+# /.env.development.local
+# /.env.test.local
+# /.env.production.local
+# /.env
 
 /client/.DS_Store
 /client/.env.local
